force-app/main/default/objects/Activity/fields/College__c.field-meta.xml
<CustomField>
    <fullName>College__c</fullName>
    <label>College</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GRAS</fullName>
            </value>
            <value>
                <fullName>GRBA</fullName>
            </value>
            <value>
                <fullName>GRCS</fullName>
            </value>
            <value>
                <fullName>GRES</fullName>
            </value>
            <value>
                <fullName>GRGC</fullName>
            </value>
            <value>
                <fullName>GRHI</fullName>
            </value>
            <value>
                <fullName>GRLA</fullName>
            </value>
            <value>
                <fullName>GRLS</fullName>
            </value>
            <value>
                <fullName>GRNH</fullName>
            </value>
            <value>
                <fullName>GRNU</fullName>
            </value>
            <value>
                <fullName>GRPP</fullName>
            </value>
            <value>
                <fullName>GRSU</fullName>
            </value>
            <value>
                <fullName>GRTE</fullName>
            </value>
            <value>
                <fullName>GRTS</fullName>
            </value>
            <value>
                <fullName>LWLW</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>