force-app/main/default/objects/Activity/fields/Enrollment_Term__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Term__c</fullName>
    <label>Enrollment Term</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>2012 Fall</fullName>
            </value>
            <value>
                <fullName>2013 Spring</fullName>
            </value>
            <value>
                <fullName>2013 Summer</fullName>
            </value>
            <value>
                <fullName>2013 Fall</fullName>
            </value>
            <value>
                <fullName>2014 Spring</fullName>
            </value>
            <value>
                <fullName>2014 Summer</fullName>
            </value>
            <value>
                <fullName>2014 Fall</fullName>
            </value>
            <value>
                <fullName>2015 Spring</fullName>
            </value>
            <value>
                <fullName>2015 Summer</fullName>
            </value>
            <value>
                <fullName>2015 Fall</fullName>
            </value>
            <value>
                <fullName>2016 Spring</fullName>
            </value>
            <value>
                <fullName>2016 Summer</fullName>
            </value>
            <value>
                <fullName>2016 Fall</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>