force-app/main/default/objects/Activity/fields/Masked_Data_Date__c.field-meta.xml
<CustomField>
    <fullName>Masked_Data_Date__c</fullName>
    <businessOwnerGroup>Data_Owner_IAM_Identity_Management</businessOwnerGroup>
    <complianceGroup>PII</complianceGroup>
    <description>Shows the date when sensitive data was detected in Activity Subject;Description by the GearsDataMask package.</description>
    <inlineHelpText>Shows the date when sensitive data was detected in Activity Subject;Description by the GearsDataMask package.</inlineHelpText>
    <label>Masked Data Date</label>
    <type>Date</type>
</CustomField>