force-app/main/default/objects/Activity/fields/Masked_Data_Exists__c.field-meta.xml
<CustomField>
    <fullName>Masked_Data_Exists__c</fullName>
    <businessOwnerGroup>Data_Owner_IAM_Identity_Management</businessOwnerGroup>
    <complianceGroup>PII</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>If marked true, then sensitive data was detected in Activity Subject;Description by the GearsDataMask package.</description>
    <inlineHelpText>If marked true, then sensitive data was detected in Activity Subject;Description by the GearsDataMask package.</inlineHelpText>
    <label>Masked Data Exists</label>
    <type>Checkbox</type>
</CustomField>