force-app/main/default/objects/Activity/fields/Plan_Code__c.field-meta.xml
<CustomField>
    <fullName>Plan_Code__c</fullName>
    <label>Plan Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AGAGRIBMS</fullName>
            </value>
            <value>
                <fullName>ARARCMARCH</fullName>
            </value>
            <value>
                <fullName>ARBDKCMS</fullName>
            </value>
            <value>
                <fullName>ARBLTENVMS</fullName>
            </value>
            <value>
                <fullName>ARDESAMMSD</fullName>
            </value>
            <value>
                <fullName>ARDESIGMSD</fullName>
            </value>
            <value>
                <fullName>ARDSCIMSD</fullName>
            </value>
            <value>
                <fullName>ARDSCNMSD</fullName>
            </value>
            <value>
                <fullName>ARENERGYMS</fullName>
            </value>
            <value>
                <fullName>ARENHHEPHD</fullName>
            </value>
            <value>
                <fullName>ARENVDEPHD</fullName>
            </value>
            <value>
                <fullName>ARFACILMS</fullName>
            </value>
            <value>
                <fullName>ARHHEMSD</fullName>
            </value>
            <value>
                <fullName>ARINDDEMSD</fullName>
            </value>
            <value>
                <fullName>ARINTDEMSD</fullName>
            </value>
            <value>
                <fullName>ARLDEMLA</fullName>
            </value>
            <value>
                <fullName>ARMUDMUD</fullName>
            </value>
            <value>
                <fullName>ARPUPPHD</fullName>
            </value>
            <value>
                <fullName>ARREMREDEV</fullName>
            </value>
            <value>
                <fullName>ARURBMUEP</fullName>
            </value>
            <value>
                <fullName>ARVCDMSD</fullName>
            </value>
            <value>
                <fullName>ASAEPMA</fullName>
            </value>
            <value>
                <fullName>ASCOMSTMA</fullName>
            </value>
            <value>
                <fullName>ASETHCE</fullName>
            </value>
            <value>
                <fullName>ASFAMCGERT</fullName>
            </value>
            <value>
                <fullName>ASGRNONDGR</fullName>
            </value>
            <value>
                <fullName>ASINTERMA</fullName>
            </value>
            <value>
                <fullName>ASJHRMA</fullName>
            </value>
            <value>
                <fullName>ASOHCGERT</fullName>
            </value>
            <value>
                <fullName>ASPGSMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>