force-app/main/default/objects/Activity/fields/Task_Source__c.field-meta.xml
<CustomField>
    <fullName>Task_Source__c</fullName>
    <label>Task Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Advertisement</fullName>
            </value>
            <value>
                <fullName>ASU UG</fullName>
            </value>
            <value>
                <fullName>College Fair - US</fullName>
            </value>
            <value>
                <fullName>College Fair - Int.</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Employee Referral</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Walk-in</fullName>
            </value>
            <value>
                <fullName>Web Form - College</fullName>
            </value>
            <value>
                <fullName>Web Form - Degree Search</fullName>
            </value>
            <value>
                <fullName>Web Form - GC Prospect</fullName>
            </value>
            <value>
                <fullName>Web Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>