force-app/main/default/objects/Activity/fields/Task_Source_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Task_Source_Subtype__c</fullName>
    <label>Task Source Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Degree Search</fullName>
            </value>
            <value>
                <fullName>Graduate Education</fullName>
            </value>
            <value>
                <fullName>Health Solutions</fullName>
            </value>
            <value>
                <fullName>MaryLouFulton Teachers College</fullName>
            </value>
            <value>
                <fullName>ASU Online</fullName>
            </value>
            <value>
                <fullName>USA Today</fullName>
            </value>
            <value>
                <fullName>Graduate College</fullName>
            </value>
            <value>
                <fullName>ASU Online Rover</fullName>
            </value>
            <value>
                <fullName>Request Info</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>